fix(header): refine authentication logic and restore login/signup button visibility

--- a/src/components/layout/header/header.scss
+++ b/src/components/layout/header/header.scss
@@ -10,8 +10,9 @@
     &__account-settings,
     .notifications__wrapper,
     &__menu {
-        svg > path,
-        svg > g > path {
+
+        svg>path,
+        svg>g>path {
             fill: var(--text-prominent);
         }
     }
@@ -142,7 +143,7 @@
             box-shadow: 0 0 2px 0 var(--du-shadow-box, #00000014);
         }
 
-        .deriv-account-switcher__balance + svg > path {
+        .deriv-account-switcher__balance+svg>path {
             fill: var(--text-general);
         }
 
@@ -293,9 +294,20 @@
     display: flex;
     padding-block: 8px;
 
+    @include mobile-or-tablet-screen {
+        padding-block: 4px;
+    }
+
     button {
         font-weight: 400;
         margin-inline-end: 1.6rem;
+
+        @include mobile-or-tablet-screen {
+            margin-inline-end: 0.8rem;
+            padding: 0 0.8rem;
+            font-size: 1.2rem;
+            height: 3.2rem;
+        }
     }
 }
 
